--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,10 @@
   .projects-holder {
     box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
   }
+  .projects-holder:hover {
+    border: 2px solid #ea0e52;
+    transition: 0.3s;
+  }
   .aboutmeimage {
     padding: 18px 25px;
   }
@@ -76,7 +80,7 @@
     box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
   }
   .box::before {
-    @apply content-[''] absolute bg-[conic-gradient(#04b0ee_20deg,transparent_120deg)] w-[300px] h-[300px] top-[-25%] left-[-25%] animate-fullSpin;
+    @apply content-[''] absolute bg-[conic-gradient(#ea0e52_20deg,transparent_120deg)] w-[300px] h-[300px] top-[-25%] left-[-25%] animate-fullSpin;
   }
   .box::after {
     @apply content-[''] text-white w-[94%] h-[94%] bg-[#212428] absolute top-[3%] left-[3%] flex justify-center items-center tracking-[2px];
@@ -102,7 +106,7 @@
   }
 
   .p-desc span {
-    @apply font-semibold text-xl text-[#ff014f] mb-5;
+    @apply font-semibold text-xl text-[#ff014f] mb-2 inline-block;
   }
   #ipadress {
     height: 240px;
@@ -182,26 +186,4 @@
   .burger-menu {
     @apply text-white text-[40px] hidden;
   }
-
-  /* 
-  --background-color-1:;
-    --background-color-2: #212428;
-    --shadow-1: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
-    --shadow-2: inset 21px 21px 19px #181a1d, inset -21px -21px 19px #202225;
-    --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
-    --shadow-white-3: 5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
-    --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
-    
-    
-    
-    
-    --background-color-1: linear-gradient(145deg, #1e2024, #23272b);
-    --background-color-2: #212428;
-    --shadow-1: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
-    --shadow-2: inset 21px 21px 19px #181a1d, inset -21px -21px 19px #202225;
-    --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
-    --shadow-white-3: 5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
-    --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
-        --inner-shadow: 1px 4px 2px -3px rgba(0, 0, 0, 0.7) inset, -1px -3px 3px -2px rgba(255, 255, 255, 0.2) inset;
-    */
 }
